// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a H1 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 1.5rem;
  font-weight: 700;
  line-height: 1.25;
  line-height: 1.25;
  margin-bottom: calc(1.5rem * 0.5);
}

<h1
  className="emotion-0"
  color="text.dark"
  fontSize="size7"
  fontWeight="bold"
>
  Hello World
</h1>
`;

exports[`renders a H2 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 1.25rem;
  font-weight: 700;
  line-height: 1.25;
  line-height: 1.25;
  margin-bottom: calc(1.25rem * 0.5);
}

<h2
  className="emotion-0"
  color="text.dark"
  fontSize="size6"
  fontWeight="bold"
>
  Hello World
</h2>
`;

exports[`renders a H3 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 1rem;
  font-weight: 700;
  line-height: 1.25;
  line-height: 1.25;
  margin-bottom: calc(1rem * 0.5);
}

<h3
  className="emotion-0"
  color="text.dark"
  fontSize="size5"
  fontWeight="bold"
>
  Hello World
</h3>
`;

exports[`renders a H4 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 700;
  line-height: 1.25;
  line-height: 1.25;
  margin-bottom: calc(0.875rem * 0.5);
}

<h4
  className="emotion-0"
  color="text.dark"
  fontSize="size4"
  fontWeight="bold"
>
  Hello World
</h4>
`;

exports[`renders a H5 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.25;
  line-height: 1.25;
  margin-bottom: calc(0.875rem * 0.5);
  line-height: 1.5;
}

<h5
  className="emotion-0"
  color="text.dark"
  fontSize="size4"
  fontWeight="medium"
>
  Hello World
</h5>
`;

exports[`renders a H6 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25;
  line-height: 1.25;
  margin-bottom: calc(0.875rem * 0.5);
  line-height: 1.5;
}

<h6
  className="emotion-0"
  color="text.dark"
  fontSize="size4"
  fontWeight="regular"
>
  Hello World
</h6>
`;
